cleaned up toList() and import